# quiz-ai

quiz-app/: package-lock.json  package.json  tailwind.config.js
quiz-app-backend/: pyproject.toml
quiz-app-backend/src/quiz_app_backend/: main.py
quiz-app/app/: layout.tsx  page.tsx
quiz-app/app/context/: QuizContext.tsx
quiz-app/app/question/: page.tsx
quiz-app/app/quiz/: page.tsx
quiz-generator/: package-lock.json  package.json
quiz-generator/app/: flashcards.css  layout.tsx  page.tsx
quiz-generator/components/: FlashcardGenerator.tsx  Header.tsx  QuizGenerator.tsx
