[project]
name = "quiz-app-backend"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Prasad", email = "prasadjs178@gmail.com"},
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.6",
    "requests>=2.32.3",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
_.env_file = ".env"
dev = "uvicorn src.quiz_app_backend.main:app --host 0.0.0.0 --reload"
start = "uvicorn src.quiz_app_backend.main:app --host 0.0.0.0 --port 8000"
